# pyrcf

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  todo.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst  intro.rst
examples/tutorials/: 01_basic_components.py  02_managed_ctrl_loop_usage.py  03_component_implementation_intro.py  04_minimal_ctrl_loop_upkie_balance.py  05_additional_features_and_components.py  README.md
examples/utils_demos/: demo_bullet_robot_visualizer.py  demo_gui_callbacks_joint_gain_tuning.py  demo_plotjuggler_loop_debugger.py
examples/utils_examples/: demo_bullet_robot_visualizer.py
pyrcf/: __init__.py  variables.py
pyrcf/components/: __init__.py  pyrcf_component.py
pyrcf/components/agents/: __init__.py  agent_base.py  ml_agent_base.py  planner_controller_agent.py  torchscript_agent_base.py
pyrcf/components/callback_handlers/: __init__.py  base_callbacks.py  callbacks_base.py  pb_gui_callbacks.py  pb_gui_utils.py  tkinter_gui_callbacks.py
pyrcf/components/controller_manager/: __init__.py  controller_manager_base.py  simple_controller_manager.py
pyrcf/components/controller_manager/command_accumulators/: __init__.py  cmd_accumulation_policies.py
pyrcf/components/controllers/: README.md  __init__.py  controller_base.py  gravity_compensated_joint_pd_controller.py  joint_pd_controller.py  segway_pid_balance_controller.py
pyrcf/components/ctrl_loop_debuggers/: __init__.py  ctrl_loop_data_publisher_base.py  ctrl_loop_debugger_base.py  data_publish_debuggers.py  data_recorder_debugger.py  pybullet_robot_plan_debugger.py  pybullet_robot_state_debugger.py
pyrcf/components/global_planners/: __init__.py  global_planner_base.py
pyrcf/components/global_planners/ui_reference_generators/: __init__.py  joystick_interface.py  key_mappings.py  keyboard_interface.py  pb_gui_iinterface.py  ui_base.py  ui_utils.py
pyrcf/components/local_planners/: __init__.py  blind_forwarding_planner.py  ik_reference_interpolator.py  joint_reference_interpolator.py  local_planner_base.py  pb_ik_reference_interpolator.py
pyrcf/components/robot_interfaces/: __init__.py  robot_interface_base.py  robot_interface_with_pinocchio.py
pyrcf/components/robot_interfaces/simulation/: __init__.py  pybullet_robot.py  sim_robot_base.py
pyrcf/components/state_estimators/: __init__.py  state_estimator_base.py
pyrcf/control_loop/: __init__.py  minimal_ctrl_loop.py  simple_managed_ctrl_loop.py
pyrcf/core/: __init__.py  exceptions.py  logging.py
pyrcf/core/base_classes/: pyrcf_component.py
pyrcf/core/types/: __init__.py  debug_types.py  motion_datatypes.py  planner_outputs.py  robot_io.py  tf_types.py
pyrcf/executables/: __init__.py  visualise_robot.py
pyrcf/test_scripts/: dummy_callbacks_testing.py
pyrcf/utils/: __init__.py  filters.py  frame_transforms.py  math_utils.py  time_utils.py  urdf_utils.py
pyrcf/utils/data_io_utils/: __init__.py  pyrcf_publisher.py  pyrcf_subscriber.py  recorded_data_parser.py
pyrcf/utils/gui_utils/: __init__.py  pb_gui_utils.py  tkinter_gui_utils.py
pyrcf/utils/kinematics_dynamics/: __init__.py  pinocchio_interface.py
pyrcf/utils/sim_utils/: __init__.py  pybullet_debug_robot.py  pybullet_robot_visualizer.py
test_scripts/: dummy_callbacks_testing.py  dummy_components_ctrl_loop.py  ik_interpolator_position_controller_manipulator.py  joint_interpolator_ctrl_loop.py  keyboard_interface_testing.py  pybullet_robot_test.py
tests/types_tests/: test_robot_io.py  test_tf_types.py
